--- a/index.html
+++ b/index.html
@@ -1,21 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/output.css">
+    <!-- <link rel="stylesheet" href="./css/output.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&family=Maven+Pro:wght@400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&family=Maven+Pro:wght@400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        "bookmark-purple": "#5267DF",
+                        "bookmark-red": "#FA5959",
+                        "bookmark-blue": "#242A45",
+                        "bookmark-grey": "#9194A2",
+                        "bookmark-white": "#f7f7f7",
+                    },
+                    fontFamily: {
+                        Poppins: ['Poppins, sans-serif']
+                    }
+                },
+                container: {
+                    center: true,
+                    padding: "1rem",
+                    screens: {
+                        lg: "1124px",
+                        xl: "1124px",
+                        "2xl": "1124px",
+                    },
+                }
+            },
+        }
+    </script>
+    <style type="text/tailwindcss">
+        @layer components {
+    .btn {
+        @apply shadow-md py-3 px-6 rounded-md transition duration-300;
+    }
+    .btn-purple{
+        @apply bg-bookmark-purple text-white;
+    }
+    .btn-white{
+        @apply bg-bookmark-white;
+    }
+    .img-style{
+        @apply w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full
+    }
+}
+    </style>
     <title>Bookmark loading page</title>
 </head>
+
 <body class="font-Poppins">
     <!-- header -->
     <header>
         <nav class="container flex items-center mt-2 sm:mt-12">
             <div><img src="./assets/logo-bookmark.svg" alt="my logo"></div>
-            <div class="hidden sm:flex sm:flex-1 justify-end items-center gap-12" id="menu-list" style="list-style: none;">
+            <div class="hidden sm:flex sm:flex-1 justify-end items-center gap-12" id="menu-list"
+                style="list-style: none;">
                 <li class="uppercase cursor-pointer text-xs text-gray-600">features</li>
                 <li class="uppercase cursor-pointer text-xs text-gray-600">pricing</li>
                 <li class="uppercase cursor-pointer text-xs text-gray-600">contact</li>
@@ -32,14 +83,18 @@
         <div class="container flex flex-col-reverse lg:flex-row items-center gap-12 mt-14 lg:mt-28">
             <!-- content -->
             <div class="flex flex-1 flex-col items-center lg:items-start">
-                <h2 class="text-bookmark-blue text-3xl md:text-4xl lg:text-5xl lg:text-left mb-6">A Simple Bookmark Manager</h2>
+                <h2 class="text-bookmark-blue text-3xl md:text-4xl lg:text-5xl lg:text-left mb-6">A Simple Bookmark
+                    Manager</h2>
                 <p class="text-bookmark-grey text-lg text-center lg:text-left mb-6">
-                    A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites
+                    A clean and simple interface to organize your favourite websites. Open a new browser tab and see
+                    your sites
                     load instantly. Try it for free.
                 </p>
                 <div class="flex justify-center flex-wrap gap-6">
-                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">Get it on Chrome</button>
-                    <button type="button" class="btn btn-white hover:bg-bookmark-purple hover:text-bookmark-white">Get it on Firefox</button>
+                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">Get it on
+                        Chrome</button>
+                    <button type="button" class="btn btn-white hover:bg-bookmark-purple hover:text-bookmark-white">Get
+                        it on Firefox</button>
                 </div>
             </div>
             <!-- image -->
@@ -47,8 +102,10 @@
                 <img class="img-style" src="./assets/hero-bg.png" alt="">
             </div>
         </div>
-    <!-- rounded rectange -->
-        <div class="hidden md:block overflow-hidden bg-bookmark-purple rounded-l-full absolute h-80 w-2/4 top-32 right-0 lg:-bottom-28 lg:-right-26"></div>
+        <!-- rounded rectange -->
+        <div
+            class="hidden md:block overflow-hidden bg-bookmark-purple rounded-l-full absolute h-80 w-2/4 top-32 right-0 lg:-bottom-28 lg:-right-26">
+        </div>
     </section>
 
     <!-- features section -->
@@ -57,7 +114,8 @@
         <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
             <h1 class="text-center text-bookmark-blue text-3xl">Features</h1>
             <p class="text-center text-bookmark-grey mt-4">
-                Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between
+                Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync
+                between
                 your devices so you can access them on the go.
             </p>
         </div>
@@ -71,14 +129,18 @@
                 <!-- content -->
                 <div class="flex flex-1 flex-col items-center lg:items-start">
                     <h1 class="text-3xl text-bookmark-blue">Bookmark in one click</h1>
-                    <p class="text-bookmark-grey my-4 text-center lg:text-left sm:w-3/4 lg:w-full">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control
+                    <p class="text-bookmark-grey my-4 text-center lg:text-left sm:w-3/4 lg:w-full">Organize your
+                        bookmarks however you like. Our simple drag-and-drop interface gives you complete control
                         over how you manage your favourite sites.
                     </p>
-                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">More Info</button>
+                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">More
+                        Info</button>
                 </div>
             </div>
             <!-- rounded rectange -->
-        <div class="hidden lg:block overflow-hidden bg-bookmark-purple rounded-r-full absolute h-80 w-2/4 -bottom-28 -left-36"></div>
+            <div
+                class="hidden lg:block overflow-hidden bg-bookmark-purple rounded-r-full absolute h-80 w-2/4 -bottom-28 -left-36">
+            </div>
         </div>
 
         <!-- feature #2 -->
@@ -92,15 +154,18 @@
                 <div class="flex flex-1 flex-col items-center lg:items-start">
                     <h1 class="text-3xl text-bookmark-blue">Intelligent search</h1>
                     <p class="text-bookmark-grey my-4 text-center lg:text-left sm:w-3/4 lg:w-full">
-                        Our powerful search feature will help you find saved sites in no time at all. No need to crawl through all
+                        Our powerful search feature will help you find saved sites in no time at all. No need to crawl
+                        through all
                         of your bookmarks.
                     </p>
-                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">More Info</button>
+                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">More
+                        Info</button>
                 </div>
             </div>
             <!-- rounded rectangle -->
-            <div
-            <div class="hidden lg:block overflow-hidden bg-bookmark-purple rounded-l-full absolute h-80 w-2/4 -bottom-24 right-0"></div>
+            <div <div
+                class="hidden lg:block overflow-hidden bg-bookmark-purple rounded-l-full absolute h-80 w-2/4 -bottom-24 right-0">
+            </div>
         </div>
 
         <!-- feature #3 -->
@@ -114,25 +179,31 @@
                 <div class="flex flex-1 flex-col items-center lg:items-start">
                     <h1 class="text-3xl text-bookmark-blue">Share your bookmarks</h1>
                     <p class="text-bookmark-grey my-4 text-center lg:text-left sm:w-3/4 lg:w-full">
-                        Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control
-                        Easily share your bookmarks and collections with others. Create a shareable link that you can send at the
+                        Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete
+                        control
+                        Easily share your bookmarks and collections with others. Create a shareable link that you can
+                        send at the
                         click of a button.
                     </p>
-                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">More Info</button>
+                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">More
+                        Info</button>
                 </div>
             </div>
             <!-- rounded rectange -->
-        <div class="hidden lg:block overflow-hidden bg-bookmark-purple rounded-r-full absolute h-80 w-2/4 -bottom-28 -left-36"></div>
+            <div
+                class="hidden lg:block overflow-hidden bg-bookmark-purple rounded-r-full absolute h-80 w-2/4 -bottom-28 -left-36">
+            </div>
         </div>
     </section>
-    
+
     <!-- Download section -->
     <section class="py-20 mt-20 ">
         <!-- Heading -->
         <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
             <h1 class="text-3xl text-center text-bookmark-blue">Download the extension</h1>
             <p class="text-bookmark-grey text-center mt-4">
-                We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to
+                We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us
+                to
                 prioritize.
             </p>
         </div>
@@ -145,9 +216,11 @@
                     <h1 class="mt-5 mb-2 text-bookmark-blue text-lg">Add to Chrome</h1>
                     <p class="mb-2 text-bookmark-grey font-light">Minimum version 62</p>
                 </div>
-                <hr class="border-b border-bookmark-white"></hr>
+                <hr class="border-b border-bookmark-white">
+                </hr>
                 <div class="flex p-6">
-                    <button type="button" class="flex-1 btn btn-purple hover:bg-bookmark-white hover:text-black">Add & Install Extension
+                    <button type="button" class="flex-1 btn btn-purple hover:bg-bookmark-white hover:text-black">Add &
+                        Install Extension
                     </button>
                 </div>
             </div>
@@ -158,9 +231,11 @@
                     <h1 class="mt-5 mb-2 text-bookmark-blue text-lg">Add to Firefox</h1>
                     <p class="mb-2 text-bookmark-grey font-light">Minimum version 62</p>
                 </div>
-                <hr class="border-b border-bookmark-white"></hr>
+                <hr class="border-b border-bookmark-white">
+                </hr>
                 <div class="flex p-6">
-                    <button type="button" class="flex-1 btn btn-purple hover:bg-bookmark-white hover:text-black">Add & Install Extension
+                    <button type="button" class="flex-1 btn btn-purple hover:bg-bookmark-white hover:text-black">Add &
+                        Install Extension
                     </button>
                 </div>
             </div>
@@ -171,9 +246,11 @@
                     <h1 class="mt-5 mb-2 text-bookmark-blue text-lg">Add to Opera</h1>
                     <p class="mb-2 text-bookmark-grey font-light">Minimum version 62</p>
                 </div>
-                <hr class="border-b border-bookmark-white"></hr>
+                <hr class="border-b border-bookmark-white">
+                </hr>
                 <div class="flex p-6">
-                    <button type="button" class="flex-1 btn btn-purple hover:bg-bookmark-white hover:text-black">Add & Install Extension
+                    <button type="button" class="flex-1 btn btn-purple hover:bg-bookmark-white hover:text-black">Add &
+                        Install Extension
                     </button>
                 </div>
             </div>
@@ -184,34 +261,36 @@
     <section class="bg-bookmark-white py-20">
         <div class="container">
             <!-- Heading -->
-        <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
-            <h1 class="text-3xl text-center text-bookmark-blue">Frequently Asked Questions</h1>
-            <p class="text-bookmark-grey text-center mt-4">
-                Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.
-            </p>
-        </div>
-        <!-- items -->
-        <div class="sm:w-3/4 lg:w-5/12 flex flex-col mt-12 mx-auto">
-            <div class="flex items-center border-b py-4 cursor-pointer">
-                <span class="flex-1">What is a Bookmark?</span>
-                <i class="text-bookmark-purple fas fa-chevron-down"></i>
-            </div>            
-            <div class="flex items-center border-b py-4 cursor-pointer">
-                <span class="flex-1">How can I request a new browser?</span>
-                <i class="text-bookmark-purple fas fa-chevron-down"></i>
+            <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
+                <h1 class="text-3xl text-center text-bookmark-blue">Frequently Asked Questions</h1>
+                <p class="text-bookmark-grey text-center mt-4">
+                    Here are some of our FAQs. If you have any other questions you’d like answered please feel free to
+                    email us.
+                </p>
             </div>
-            <div class="flex items-center border-b py-4 cursor-pointer">
-                <span class="flex-1">Is there a mobile app?</span>
-                <i class="text-bookmark-purple fas fa-chevron-down"></i>
-            </div>            
-            <div class="flex items-center border-b py-4 cursor-pointer">
-                <span class="flex-1">What about other Chromium browsers?</span>
-                <i class="text-bookmark-purple fas fa-chevron-down"></i>
+            <!-- items -->
+            <div class="sm:w-3/4 lg:w-5/12 flex flex-col mt-12 mx-auto">
+                <div class="flex items-center border-b py-4 cursor-pointer">
+                    <span class="flex-1">What is a Bookmark?</span>
+                    <i class="text-bookmark-purple fas fa-chevron-down"></i>
+                </div>
+                <div class="flex items-center border-b py-4 cursor-pointer">
+                    <span class="flex-1">How can I request a new browser?</span>
+                    <i class="text-bookmark-purple fas fa-chevron-down"></i>
+                </div>
+                <div class="flex items-center border-b py-4 cursor-pointer">
+                    <span class="flex-1">Is there a mobile app?</span>
+                    <i class="text-bookmark-purple fas fa-chevron-down"></i>
+                </div>
+                <div class="flex items-center border-b py-4 cursor-pointer">
+                    <span class="flex-1">What about other Chromium browsers?</span>
+                    <i class="text-bookmark-purple fas fa-chevron-down"></i>
+                </div>
+                <button type="button"
+                    class="flex self-center mt-12 btn btn-purple hover:bg-bookmark-white hover:text-black">More
+                </button>
             </div>
-            <button type="button" class="flex self-center mt-12 btn btn-purple hover:bg-bookmark-white hover:text-black">More
-            </button>
-        </div>
-        
+
         </div>
     </section>
 
@@ -222,11 +301,13 @@
                 <p class="font-light uppercase text-center mb-8">35,000+ ALREADY JOINED</p>
                 <h1 class="text-2xl text-center">Stay up-to-date with what we’re doing</h1>
                 <div class="flex flex-col sm:flex-row gap-6 mt-8">
-                    <input type="text" placeholder="Enter your email address" class="focus:outline-none flex-1 px-2 py-3 rounded-md text-black"/>
-                    <button type="button" class="btn bg-bookmark-red hover:bg-bookmark-white hover:text-black">Contact Us</button>
-                    </div>
+                    <input type="text" placeholder="Enter your email address"
+                        class="focus:outline-none flex-1 px-2 py-3 rounded-md text-black" />
+                    <button type="button" class="btn bg-bookmark-red hover:bg-bookmark-white hover:text-black">Contact
+                        Us</button>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -251,4 +332,5 @@
     <script>
     </script>
 </body>
+
 </html>
